# CloudDisk

./: .gitignore  CMakeLists.txt  LICENSE
include/: RabbitMQ.h
src/: CryptoUtil.cc  FileHandler.cc  OssManager.cc  OssWorker_Consumer.cc  RabbitMQ.cc
